# wasm_bench

./: Cargo.toml  README.md  bench_native.sh  bench_wasmedge.sh  bench_wasmer.sh  bench_wasmtime.sh  bench_wavm.sh  build.sh
src/: lib.rs
src/model/: book.rs  empty.rs  feed_request.rs  mod.rs  prim_str.rs  twitter.rs
testdata/: book.json  feed_request.json
